--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "build:check": "tsc -b && vite build",
     "lint": "eslint .",
@@ -31,6 +31,7 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "vconsole": "^3.15.1",
     "vite": "^6.3.5"
   }
 }
