--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@ant-design/x": "^1.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.25.3",
     "antd-style": "^3.7.1",
+    "dayjs": "^1.11.13",
     "openai": "^4.103.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
